src/objects/Bundle_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Bundle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bundle</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.RecordTypeId</field>
                <operation>equals</operation>
                <value>Bundle</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Bundle Line Items</relationshipLabel>
        <relationshipName>Bundle_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EAV__c</fullName>
        <label>EAV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.RecordTypeId</field>
                <operation>equals</operation>
                <value>Discount, Commercial Product</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Bundles</relationshipLabel>
        <relationshipName>Bundle_Line_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Bundle Line Item</label>
    <nameField>
        <displayFormat>BLI-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bundle Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Active_Product_Values_Cantbe_Changed</fullName>
        <active>true</active>
        <errorConditionFormula>Bundle__r.IsActive = TRUE &amp;&amp; NOT(LastModifiedDate &lt;&gt; LastModifiedDate)</errorConditionFormula>
        <errorMessage>Active product details cannot be edited</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Archived_Product_Values_Cantbe_Changed</fullName>
        <active>true</active>
        <errorConditionFormula>Bundle__r.Archived_Product__c  = TRUE &amp;&amp; NOT(LastModifiedDate &lt;&gt; LastModifiedDate)</errorConditionFormula>
        <errorMessage>Archived product details cannot be edited</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cant_Add_New_Values_to_Active_Products</fullName>
        <active>true</active>
        <errorConditionFormula>ISNEW() = TRUE  &amp;&amp; Bundle__r.IsActive = TRUE</errorConditionFormula>
        <errorMessage>You cannot add new Bundle Line Items to an Active Bundle</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cant_Add_New_Values_to_Archived_Products</fullName>
        <active>true</active>
        <errorConditionFormula>ISNEW() = TRUE  &amp;&amp;  Bundle__r.Archived_Product__c = TRUE</errorConditionFormula>
        <errorMessage>You cannot add new Bundle Line Items to an Archived Bundle</errorMessage>
    </validationRules>
</CustomObject>